--- a/sdkjs-plugins/content/dataGetter/index.html
+++ b/sdkjs-plugins/content/dataGetter/index.html
@@ -9,6 +9,6 @@
     <div id="names-plugin"></div>
 
     <script src="https://cdn.onlyoffice.com/sdk/v1/onlyoffice.js"></script>
-    <script src="plugin.js"></script>
+    <script src="plugins.js"></script>
   </body>
 </html>
